# Nexus-Mind

./: .gitignore  CLAUDE.md  README.md  discussion.md  f1.md  mcp.md  settings.gradle
.github/scripts/: test-bridge.js  test-e2e-chat.js  test-full-session.js  test-mcp-http.js  test-pty-session.js  test-stream-json.js
.github/workflows/: auto-fix.yml  build.yml  test-e2e-chat.yml  test-full-session.yml  test-mcp-http.yml  test-pty.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: provider_registry.html  providers.json  setup.sh
app/src/main/assets/nodejs-project/: bridge.js  package.json
app/src/main/assets/terminal/: index.html
app/src/main/cpp/: CMakeLists.txt  node_bridge.cpp  node_launcher.cpp  pty_helper.c
app/src/main/java/com/claudecodesetup/: ClaudeApp.kt  LoginFlowActivity.kt  NodeEngine.kt  SettingsActivity.kt  SetupActivity.kt  SplashActivity.kt  TerminalActivity.kt  TermuxInstallActivity.kt
app/src/main/java/com/claudecodesetup/data/: AppPreferences.kt  Providers.kt  ProvidersRepository.kt
app/src/main/java/com/claudecodesetup/discussion/: ConvergenceDetector.kt  DiscussionModels.kt  DiscussionOrchestrator.kt  PromptBuilder.kt  ProviderClient.kt
app/src/main/res/anim/: fade_in.xml  fade_out.xml
app/src/main/res/drawable/: bg_error_card.xml  bg_input_bar.xml  bg_provider_card.xml  bg_quick_btn.xml  bg_send_btn.xml  ic_eye.xml  ic_eye_off.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_status_error.xml  ic_status_key.xml  ic_status_success.xml
app/src/main/res/layout/: activity_login_flow.xml  activity_settings.xml  activity_setup.xml  activity_terminal.xml  activity_termux_install.xml
app/src/main/res/menu/: terminal_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
scripts/: build-llamaserver.sh  download-libnode.sh
src/components/: AppIcon.jsx
(+37 files in other folders)
